--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("style/header.css");
 @import url("style/banner.css");
+@import url("style/carrossel.css");
+
 
 
 :root {
@@ -11,4 +13,7 @@
 
 body {
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
